Added a calculator page.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.2.0",
     "bcryptjs": "^2.4.3",
     "file-saver": "^2.0.5",
+    "framer-motion": "^12.5.0",
     "mongoose": "^8.4.4",
     "next": "^14.2.24",
     "next-auth": "^4.24.7",
